# rileyviewer

./: .gitignore  Cargo.toml  README.md  code_review.txt  convo_with_gemini.txt
.claude/: settings.local.json
.github/workflows/: release.yml
crates/rv_cli/: Cargo.toml
crates/rv_cli/src/: main.rs
crates/rv_config/: Cargo.toml
crates/rv_config/src/: lib.rs
crates/rv_core/: Cargo.toml
crates/rv_core/src/: lib.rs
crates/rv_py/: Cargo.toml
crates/rv_py/src/: lib.rs
crates/rv_server/: Cargo.toml
crates/rv_server/src/: lib.rs
python/: .gitignore  README.md  pyproject.toml
python/src/rileyviewer/: __init__.py  adapters.py  exceptions.py  viewer.py
scripts/: build-web.sh
tests/: interactive_demo.py  send_plot.py  send_plot_smoke.py  test_client_mode.py
tests/examples/: plotly_basic.py
web/: package.json
web/src/routes/: +page.svelte
