[workspace]
members = [
    "crates/rv_core",
    "crates/rv_server",
    "crates/rv_py",
    "crates/rv_cli",
]
resolver = "3"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Riley Leff <rileyleff@gmail.com>"]
repository = "https://github.com/rileyleff/rileyviewer"

[workspace.dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["ws"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.41", features = ["macros", "rt-multi-thread", "sync"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }
uuid = { version = "1.11", features = ["v4"] }
