[project]
name = "rileyviewer"
version = "0.1.0"
description = "Rust-backed plot orchestrator and web viewer"
readme = "README.md"
authors = [
    { name = "RileyLeff", email = "rileyleff@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["matplotlib", "numpy", "websockets>=12.0"]

[build-system]
requires = ["maturin>=1.6,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "src"
module-name = "rileyviewer._core"
bindings = "pyo3"
features = ["pyo3/extension-module"]
manifest-path = "../crates/rv_py/Cargo.toml"
