[project]
name = "rileyviewer"
version = "0.1.0"
description = "Plot viewer for Python with persistent browser-based UI"
readme = "README.md"
authors = [
    { name = "RileyLeff", email = "rileyleff@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Visualization",
]

[project.urls]
Homepage = "https://github.com/rileyleff/rileyviewer"
Repository = "https://github.com/rileyleff/rileyviewer"

[project.optional-dependencies]
dev = ["matplotlib", "numpy", "websockets>=12.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rileyviewer"]

# Include the pre-built CLI binary as a script
# CI copies the binary to python/bin/ before building
[tool.hatch.build.targets.wheel.force-include]
"bin/rileyviewer" = "rileyviewer-0.1.0.data/scripts/rileyviewer"

[dependency-groups]
dev = [
    "build>=1.3.0",
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
]
