[package]
name = "rv_py"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
base64 = "0.22"
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py38"] }
rv_core = { path = "../rv_core" }
rv_server = { path = "../rv_server" }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
once_cell = "1.20"
