[package]
name = "rv_server"
version = "0.1.0"
edition = "2021"

[features]
embed-assets = ["rust-embed"]

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
futures = { workspace = true }
rv_config = { path = "../rv_config" }
rv_core = { path = "../rv_core" }
rust-embed = { version = "8.5", optional = true }
mime_guess = "2.0"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
